--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html ng-app="tbi">
 <head>
 
-	<meta charset="utf-8">
-	<title>VIT-TBI</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<script src="js/jquery.js"></script>
+  <meta charset="utf-8">
+  <title>VIT-TBI</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <script src="js/jquery.js"></script>
     <script src="js/tbi.js"></script>
-	<script src="js/smooth-scroll.js"></script>
-	
+  <script src="js/smooth-scroll.js"></script>
+  
     <script type="text/javascript" src="js/angular.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript">
@@ -29,10 +29,10 @@
     });
     </script>
     <!--<script type="text/javascript" src="js/angular.js"></script>-->
-	<!--<script src="js/jquery-2.1.1.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/hamburger.css"/>
+  <!--<script src="js/jquery-2.1.1.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/hamburger.css"/>
 
-	<link rel="stylesheet" type="text/css" href="css/hamburger.css"/>
+  <link rel="stylesheet" type="text/css" href="css/hamburger.css"/>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.min.css">
 
@@ -87,9 +87,9 @@
    </div>
    <div class="col-lg-1 col-md-1"><img style="margin-top:-21px"src="images/line.png"></div>
    <ul>
-       <li class="linkdrop col-lg-2 col-md-2"><a href="">Projects<br>Under Incubation</a></li>
-       <li class="linkdrop col-lg-2 col-md-2"><a href="">Graduated<br> Companies</a></li>
-       <li class="linkdrop col-lg-2 col-md-2"><a href="">Anchor<br> Companies</a></li>
+       <li class="linkdrop col-lg-2 col-md-2"><a href="#">Projects<br>Under Incubation</a></li>
+       <li class="linkdrop col-lg-2 col-md-2"><a href="#">Graduated<br> Companies</a></li>
+       <li class="linkdrop col-lg-2 col-md-2"><a href="#">Anchor<br> Companies</a></li>
    </ul>
    </div>
 </div>
