--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="js/jquery.js"></script>
     <script src="js/tbi.js"></script>
   <script src="js/smooth-scroll.js"></script>
-  
+    <script type="text/javascript" src="js/angular-animate.js"></script>
     <script type="text/javascript" src="js/angular.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript">
@@ -63,7 +63,7 @@
            </ul>
          </nav>
        </div>
-       <div id="fsdrop" class="container-fluid dropdown1 animate-show" ng-show="navctrl.isSelected(1)">
+       <div id="fsdrop" class="container-fluid dropdown1" ng-animate="animate-show" ng-show="navctrl.isSelected(1)">
    <div class="container-fluid" style="display:flex;">
    <div style="width:16%">
     <h1 class="linkhead">FACILITIES AND <br>SERVICES</h1>
