--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
     
 </div>
  <div class="contact col-lg-4 col-md-6 col-sm-12 col-xs-12 ">
-  <h3 style="color:#fcfcfc; font-weight:bolder;font-size:28px;">Address</h3>
+  <h3 class="foot">Address</h3>
   <p>VIT - Technology Business Incubator,
 Vellore Institute of Technology,
 Vellore – 632 014, Tamil Nadu, India. 
