--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
          <nav role="navigation" class="navbar-collapse">
            <ul class="nav navbar-nav">
              <li style="width: 14.66666667%;"><img class="logo" src="images/logo.png"></li>
-             <li  class="links1" ng-click="navctrl.selectTab(0)"><a  style="position: relative;padding-top: 50px;"href="#home">Home</a></li>
+             <li  class="links1" ng-click="navctrl.selectTab(0) "><a  style="position: relative;padding-top: 50px;"href="#home">Home</a></li>
              <li  class="links1" ng-click="navctrl.selectTab(0)"><a  style="position: relative;padding-top: 50px;"href="#about_tbi">About</a></li>
-             <li ng-mouseenter="show1 = true" ng-mouseleave="show1 = false" class="links1" ng-click="navctrl.selectTab(1)"><a  style="position: relative;padding-top: 50px;"href="#services">Facilities & Services<span class="caret"></span></a></li>
-             <li ng-mouseenter="show2 = true" ng-mouseleave="show2 = false" class="links1" ng-click="navctrl.selectTab(2)"><a  style="position: relative;padding-top: 50px;"href="#">Our Startups<span class="caret"></span></a></li>
-             <li ng-mouseenter="show3 = true" ng-mouseleave="show3 = false" class="links1" ng-click="navctrl.selectTab(3)"><a  style="position: relative;padding-top: 50px;"href="#">News & Events<span class="caret"></span></a></li>
+             <li  class="links1" ng-click="navctrl.selectTab(1)" ng-show="bool" class="fade"><a  style="position: relative;padding-top: 50px;"href="#services">Facilities & Services<span class="caret"></span></a></li>
+             <li  class="links1" ng-click="navctrl.selectTab(2)"><a  style="position: relative;padding-top: 50px;"href="#">Our Startups<span class="caret"></span></a></li>
+             <li  class="links1" ng-click="navctrl.selectTab(3)"><a  style="position: relative;padding-top: 50px;"href="#">News & Events<span class="caret"></span></a></li>
              <li  class="links1" ng-click="navctrl.selectTab(0)"><a  style="position: relative;padding-top: 50px;"href="#">CSR Partenership</a></li>
              <li  class="links1" ng-click="navctrl.selectTab(0)"><a  style="position: relative;padding-top: 50px;"href="#">Past Events</a></li>
            </ul>
          </nav>
        </div>
-       <div id="fsdrop" class="container-fluid dropdown1" ng-show="show1"ng-animate="animate-show" ng-show="navctrl.isSelected(1)">
+       <div id="fsdrop" class="container-fluid dropdown1" ng-click="bool=true" ng-animate="animate-show" ng-show="navctrl.isSelected(1)">
    <div class="container-fluid" style="display:flex;">
    <div style="width:16%">
     <h1 class="linkhead">FACILITIES AND <br>SERVICES</h1>
@@ -77,7 +77,7 @@
   </ul>
   </div>
  </div>
-  <div id="osdrop" class="container-fluid dropdown1 animate-show" ng-show="show2"ng-show="navctrl.isSelected(2)">
+  <div id="osdrop" class="container-fluid dropdown1 animate-show"ng-show="navctrl.isSelected(2)">
    <div class="col-lg-12 col-md-12">
    <div class="borderight col-lg-3 col-md-3">
        <h1 class="linkhead">OUR <br>STARTUPS</h1>
@@ -90,7 +90,7 @@
    </ul>
    </div>
   </div>
-  <div id="news" class="container-fluid dropdown1 animate-show" ng-show="show3" ng-show="navctrl.isSelected(3)">
+  <div id="news" class="container-fluid dropdown1 animate-show"  ng-show="navctrl.isSelected(3)">
    <div class="col-lg-12 col-md-12">
    <div class="borderight col-lg-2 col-md-2">
        <h1 class="linkhead">NEWS & <br>EVENTS</h1>
@@ -283,10 +283,8 @@
       </a>
     </div>
     </div>
-    </div>
-</body>
-</html>
-<!--<footer class="footer container-fluid side-collapse-container" >
+    <footer class="footer" >
+   <div class="row">
     <div class="col-lg-8">
 
     
@@ -299,10 +297,18 @@ Vellore – 632 014, Tamil Nadu, India.
 Tel. +91 416 224 3097
 Email: vittbi@vit.ac.in, vittbi@yahoo.co.in </p>
 </div>
-<div class="borderdown col-lg-12 col-md-12 col-sm-12 col-xs-12 side-collapse-container">
+</div>
+<div class="row">
+<div class="borderdown col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <h3>© 2014 Copyright Vellore Institute Of Technology. All rights reserved.</h3>
+</div>
 </div> 
-</footer>-->
+</footer>
+    </div>
+
+</body>
+</html>
+
 
 <script>
     smoothScroll.init();
