--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <script src="js/jquery.js"></script>
     <script src="js/tbi.js"></script>
   <script src="js/smooth-scroll.js"></script>
-    <script type="text/javascript" src="js/angular-animate.js"></script>
-    <script type="text/javascript" src="js/angular.min.js"></script>
+  <script type="text/javascript" src="js/angular.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/angular-animate.js"></script>
     <script type="text/javascript">
     $(document).ready(function() {   
                 var sideslider = $('[data-toggle=collapse-side]');
@@ -22,11 +22,7 @@
                     $(sel2).toggleClass('out');
                 });
             });
-    $('#wrap').tabs({
-        select: function(event, ui) {
-            $(this).find('li').removeClass('myclass').eq(ui.index).addClass('myclass')
-        }
-    });
+    
     </script>
     <!--<script type="text/javascript" src="js/angular.js"></script>-->
   <!--<script src="js/jquery-2.1.1.min.js"></script>
@@ -41,7 +37,7 @@
    
 </head>
 <body>
-   <div ng-controller="navController as navctrl" ng-controller="Mainctrl">
+   <div id="mainnavbar" ng-controller="navController as navctrl">
    <div role="banner" class="navbar navbar-fixed-top navbar-inverse" class="container-fluid nav ">
        <div class="navbar-header">
          <button data-toggle="collapse-side" data-target=".side-collapse" data-target-2=".side-collapse-container" type="button" class="navbar-toggle pull-left"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><h1 class="logo3"style="color:white;font-size:20px;font-family:Roboto;text-align:start;">Menu</h1>
@@ -52,15 +48,15 @@
              <li style="width: 14.66666667%;"><img class="logo" src="images/logo.png"></li>
              <li  class="links1" ng-click="navctrl.selectTab(0) "><a  style="position: relative;padding-top: 50px;"href="#home">Home</a></li>
              <li  class="links1" ng-click="navctrl.selectTab(0)"><a  style="position: relative;padding-top: 50px;"href="#about_tbi">About</a></li>
-             <li  class="links1" ng-click="navctrl.selectTab(1)" ng-show="bool" class="fade"><a  style="position: relative;padding-top: 50px;"href="#services">Facilities & Services<span class="caret"></span></a></li>
-             <li  class="links1" ng-click="navctrl.selectTab(2)"><a  style="position: relative;padding-top: 50px;"href="#">Our Startups<span class="caret"></span></a></li>
-             <li  class="links1" ng-click="navctrl.selectTab(3)"><a  style="position: relative;padding-top: 50px;"href="#">News & Events<span class="caret"></span></a></li>
+             <li  class="links1" ng-click="navctrl.selectTab(1)"><a  style="position: relative;padding-top: 50px;"href="#services">Facilities & Services<span class="caret"></span></a></li>
+             <li  class="links1" ng-click="navctrl.selectTab(2) "><a  style="position: relative;padding-top: 50px;"href="#">Our Startups<span class="caret"></span></a></li>
+             <li  class="links1" ng-click="navctrl.selectTab(3) "><a  style="position: relative;padding-top: 50px;"href="#">News & Events<span class="caret"></span></a></li>
              <li  class="links1" ng-click="navctrl.selectTab(0)"><a  style="position: relative;padding-top: 50px;"href="#">CSR Partenership</a></li>
              <li  class="links1" ng-click="navctrl.selectTab(0)"><a  style="position: relative;padding-top: 50px;"href="#">Past Events</a></li>
            </ul>
          </nav>
        </div>
-       <div id="fsdrop" class="container-fluid dropdown1" ng-click="bool=true" ng-animate="animate-show" ng-show="navctrl.isSelected(1)">
+       <div id="fsdrop" class="container-fluid dropdown1"  ng-show="navctrl.isSelected(1)">
    <div class="container-fluid" style="display:flex;">
    <div style="width:16%">
     <h1 class="linkhead">FACILITIES AND <br>SERVICES</h1>
@@ -77,7 +73,7 @@
   </ul>
   </div>
  </div>
-  <div id="osdrop" class="container-fluid dropdown1 animate-show"ng-show="navctrl.isSelected(2)">
+  <div id="osdrop" class="container-fluid dropdown1 animate-show"  ng-show="navctrl.isSelected(2)">
    <div class="col-lg-12 col-md-12">
    <div class="borderight col-lg-3 col-md-3">
        <h1 class="linkhead">OUR <br>STARTUPS</h1>
@@ -105,10 +101,49 @@
   </div>
 
   </div>
-
-
-     <!--
-<div class="nav container-fluid">
+  <header role="banner" id="slidernavbar" class="navbar navbar-fixed-top navbar-inverse" class="container-fluid nav ">
+      <div class="navbar-header">
+        <button data-toggle="collapse-side" data-target=".side-collapse" data-target-2=".side-collapse-container" type="button" class="navbar-toggle pull-left"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><h1 class="logo3"style="color:white;font-size:20px;font-family:Roboto;text-align:start;">Menu</h1>
+      </div>
+      <div class="navbar-inverse side-collapse in">
+        <nav role="navigation" class="navbar-collapse">
+          <ul class="navbar-nav">
+            <li class="links2"><a href="#home">Home</a></li>
+            <li class="links2"><a href="#about_tbi">About</a></li>
+            <li class="dropdown links2">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Facilities & Services<b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Infrastructure</a></li>
+              <li><a href="#">Access<br>to Funding</a></li>
+              <li><a href="#">Soft Landing<br> Support</a></li>
+              <li><a href="#">Training &<br> Development</a></li>
+              <li><a href="#">Projects &<br> Partnership</a></li>
+              <li><a href="#">Monitoring</a></li>
+              <li><a href="#">IPR Cell</a></li>
+            </ul>
+          </li>
+              <li class="dropdown links2">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Our Startups<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Projects<br>Under Incubation</a></li>
+                <li><a href="#">Graduated<br> Companies</a></li>
+                <li><a href="#">Anchor<br> Companies</a></li>
+              </ul>
+            </li>
+              <li class="dropdown links2">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">News & Events<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Promotional<br>Events</a></li>
+                <li><a href="#">Newsletter &<br>Press Release</a></li>
+              </ul>
+            </li>
+            <li class="links2"><a href="#">CSR Partenership</a></li>
+            <li class="links2"><a href="#">Past Events</a></li>
+          </ul>
+        </nav>
+      </div>
+      </header>
+      <!--container-fluid">
         <li class="col-lg-2 col-md-3 col-sm-12" style="width: 14.66666667%;"><img class="logo" src="images/logo.png"></li>
         <li class="col-lg-1 col-md-1 links1" ><a  style="position: relative;padding-top: 50px;"href="#home">Home</a></li>
         <li class="col-lg-1 col-md-1 links1" ><a  style="position: relative;padding-top: 50px;"href="#about_tbi">About</a></li>
@@ -131,11 +166,7 @@
     -->
           <!--End nav bar-->
 
-    <div id="home" class="side-collapse-container"style="background-image: url(images/background3.jpg);  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;background-size:cover;background-repeat:no-repeat;background-position: center;">
+    <div id="home" class="side-collapse-container"style="background-image: url(images/background3.jpg);position: absolute;top: 0; right: 0; bottom: 0;left: 0;background-size:cover;background-repeat:no-repeat;background-position: center;">
 
   <div class="container-fluid maintext">
    <div class="logo4">
@@ -176,6 +207,7 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
+        <div class="row">
           <img class="col-lg-4 col-md-4 col-sm-12 sliderimage" src="images/sliderimage1.jpg" alt="Chania">
           <div class="col-lg-6 col-md-4 col-sm-12 text">
               <h1>Event Name</h1>
@@ -183,34 +215,39 @@
               <img href="#" style="cursor:pointer;padding:6px;" src="images/km.png">
           </div>
         </div>
-
+       </div>
         <div class="item">
+        <div class="row">
           <img class="col-lg-4 col-md-4 col-sm-12 sliderimage" src="images/sliderimage1.jpg" alt="Chania">
           <div class="col-lg-6 col-md-4 col-sm-12 text">
               <h1>Event Name</h1>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
               <img href="#" style="cursor:pointer;padding:6px;" src="images/km.png">
           </div>
+          </div>
         </div>
 
         <div class="item">
+        <div class="row">
           <img class="col-lg-4 col-md-4 col-sm-12 sliderimage" src="images/sliderimage1.jpg" alt="Flower">
           <div class="col-lg-6 col-md-4 col-sm-12 text">
               <h1>Event Name</h1>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
               <img href="#" style="cursor:pointer;padding:6px;" src="images/km.png">
           </div>
+          </div>
         </div>
 
-        <div class="item">
+         <div class="item">
+        <div class="row">
           <img class="col-lg-4 col-md-4 col-sm-12 sliderimage" src="images/sliderimage1.jpg" alt="Flower">
           <div class="col-lg-6 col-md-4 col-sm-12 text">
               <h1>Event Name</h1>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
               <img href="#" style="cursor:pointer;padding:6px;" src="images/km.png">
           </div>
+          </div>
         </div>
-      </div>
 
       <!-- Left and right controls -->
       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
@@ -221,6 +258,7 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
+    </div>
     </div>
     </div>
     <div class="container2" id="news" ng-show="tbictrl.isSelected(2)">
@@ -236,41 +274,48 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
+         <img class="col-lg-4 col-md-4 col-sm-12  sliderimage" src="images/sliderimage1.jpg" alt="Chania">
+          <div class="col-lg-6 col-md-4 col-sm-12 text">
+              <h1>News & Events</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <img href="#" style="cursor:pointer;padding:6px;" src="images/km.png">
+          </div>
+        </div>
+
+        <div class="item">
+          <div class="row">
           <img class="col-lg-4 col-md-4 col-sm-12  sliderimage" src="images/sliderimage1.jpg" alt="Chania">
           <div class="col-lg-6 col-md-4 col-sm-12 text">
               <h1>News & Events</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <img href="#" style="cursor:pointer;padding:6px;" src="images/km.png">
           </div>
+          </div>
         </div>
 
         <div class="item">
-          <img class="col-lg-4 col-md-4 col-sm-12 sliderimage" src="images/sliderimage1.jpg" alt="Chania">
+         <div class="row">
+          <img class="col-lg-4 col-md-4 col-sm-12  sliderimage" src="images/sliderimage1.jpg" alt="Chania">
           <div class="col-lg-6 col-md-4 col-sm-12 text">
               <h1>News & Events</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <img href="#" style="cursor:pointer;padding:6px;" src="images/km.png">
           </div>
+          </div>
         </div>
 
+
         <div class="item">
-          <img class="col-lg-4 col-md-4 col-sm-12 sliderimage" src="images/sliderimage1.jpg" alt="Flower">
+      <div class="row">
+          <img class="col-lg-4 col-md-4 col-sm-12  sliderimage" src="images/sliderimage1.jpg" alt="Chania">
           <div class="col-lg-6 col-md-4 col-sm-12 text">
               <h1>News & Events</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <img href="#" style="cursor:pointer;padding:6px;" src="images/km.png">
           </div>
-        </div>
-
-        <div class="item">
-          <img class="col-lg-4 col-md-4 col-sm-12 sliderimage" src="images/sliderimage1.jpg" alt="Flower">
-          <div class="col-lg-6 col-md-4 col-sm-12 text">
-              <h1>News & Events</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <img href="#" style="cursor:pointer;padding:6px;" src="images/km.png">
           </div>
         </div>
-      </div>
+
 
       <!-- Left and right controls -->
       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
@@ -281,6 +326,7 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
+    </div>
     </div>
     </div>
     <footer class="footer" >
