--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!doctype html>
 <html ng-app="tbi">
 <head>
-
   <meta charset="utf-8">
   <title>VIT-TBI</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="css/Roboto-Medium.ttf">
+  <link rel="stylesheet" type="text/css" href="css/Roboto-Bold.ttf">
+  <link rel="stylesheet" type="text/css" href="css/Roboto-Regular.ttf">
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <script src="js/jquery.js"></script>
     <script src="js/tbi.js"></script>
   <script src="js/smooth-scroll.js"></script>
   <script type="text/javascript" src="js/angular.min.js"></script>
+  <script type="text/javascript" src="js/angular-animate.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/angular-animate.js"></script>
     <script type="text/javascript">
     $(document).ready(function() {   
                 var sideslider = $('[data-toggle=collapse-side]');
@@ -56,7 +58,7 @@
            </ul>
          </nav>
        </div>
-       <div id="fsdrop" class="container-fluid dropdown1"  ng-show="navctrl.isSelected(1)">
+       <div id="fsdrop"  class="container-fluid dropdown1 show-hide" ng-show="navctrl.isSelected(1)">
    <div class="container-fluid" style="display:flex;">
    <div style="width:16%">
     <h1 class="linkhead">FACILITIES AND <br>SERVICES</h1>
@@ -73,7 +75,7 @@
   </ul>
   </div>
  </div>
-  <div id="osdrop" class="container-fluid dropdown1 animate-show"  ng-show="navctrl.isSelected(2)">
+  <div id="osdrop" ng-animate=" 'animate' " class="container-fluid dropdown1 animate-show"  ng-show="navctrl.isSelected(2)">
    <div class="col-lg-12 col-md-12">
    <div class="borderight col-lg-3 col-md-3">
        <h1 class="linkhead">OUR <br>STARTUPS</h1>
@@ -125,7 +127,7 @@
               <li class="dropdown links2">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Our Startups<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Projects<br>Under Incubation</a></li>
+                <li><a href="#">Projects<br>Under Incubation<	/a></li>
                 <li><a href="#">Graduated<br> Companies</a></li>
                 <li><a href="#">Anchor<br> Companies</a></li>
               </ul>
