--- a/index.html
+++ b/index.html
@@ -26,19 +26,15 @@
             });
     
     </script>
-    <!--<script type="text/javascript" src="js/angular.js"></script>-->
-  <!--<script src="js/jquery-2.1.1.min.js"></script>
-    <!-- Latest compiled and minified CSS -->
+ 
     <link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.min.css">
-
-    <!-- Optional theme -->
-    <!--<link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap-theme.min.css">-->
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
    
 </head>
 <body>
+<!--Main Nav-->
    <div id="mainnavbar" ng-controller="navController as navctrl">
    <div role="banner" class="navbar navbar-fixed-top navbar-inverse" class="container-fluid nav ">
        <div class="navbar-header">
@@ -103,6 +99,7 @@
   </div>
 
   </div>
+  <!--mobile nav-->
   <header role="banner" id="slidernavbar" class="navbar navbar-fixed-top navbar-inverse" class="container-fluid nav ">
       <div class="navbar-header">
         <button data-toggle="collapse-side" data-target=".side-collapse" data-target-2=".side-collapse-container" type="button" class="navbar-toggle pull-left"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><h1 class="logo3"style="color:white;font-size:20px;font-family:Roboto;text-align:start;">Menu</h1>
@@ -127,7 +124,7 @@
               <li class="dropdown links2">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Our Startups<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Projects<br>Under Incubation<	/a></li>
+                <li><a href="#">Projects<br>Under Incubation</a></li>
                 <li><a href="#">Graduated<br> Companies</a></li>
                 <li><a href="#">Anchor<br> Companies</a></li>
               </ul>
@@ -145,27 +142,6 @@
         </nav>
       </div>
       </header>
-      <!--container-fluid">
-        <li class="col-lg-2 col-md-3 col-sm-12" style="width: 14.66666667%;"><img class="logo" src="images/logo.png"></li>
-        <li class="col-lg-1 col-md-1 links1" ><a  style="position: relative;padding-top: 50px;"href="#home">Home</a></li>
-        <li class="col-lg-1 col-md-1 links1" ><a  style="position: relative;padding-top: 50px;"href="#about_tbi">About</a></li>
-        <li class="col-lg-2 col-md-1 links1" style="width: 14.66666667%;"><a  style="position: relative;padding-top: 50px;"href="#services">Facilities & Services<span class="caret"></span></a></li>
-        <li class="col-lg-2 col-md-1 links1" style="width: 14.66666667%;"><a  style="position: relative;padding-top: 50px;"href="#">Our Startups<span class="caret"></span></a></li>
-        <li class="col-lg-2 col-md-1 links1" style="width: 14.66666667%;"><a  style="position: relative;padding-top: 50px;"href="#">News & Events<span class="caret"></span></a></li>
-        <li class="col-lg-2 col-md-1 links1" style="width: 14.66666667%;"><a  style="position: relative;padding-top: 50px;"href="#">CSR Partenership</a></li>
-        <!--li class="col-lg-1 col-md-1 links1"><a  href="#">Past Events</a></li>
-        <li class="dropdown links1 col-lg-1 col-md-1">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Past Events<span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
-                  </ul>
-        </li>
-    </div>
-    -->
           <!--End nav bar-->
 
     <div id="home" class="side-collapse-container"style="background-image: url(images/background3.jpg);position: absolute;top: 0; right: 0; bottom: 0;left: 0;background-size:cover;background-repeat:no-repeat;background-position: center;">
@@ -174,12 +150,14 @@
    <div class="logo4">
      <img src="images/logo.png">    
   </div>
-  <div class="col-lg-8 col-md-8">
+  <div class="row">
+  <div class="col-lg-8 col-md-12">
     <h1 class="underwhite">We don't create JOBS</h1><br>
     <h1 class="underwhite2">We create OPPORTUNITIES..</h1>
     </div>
-    <div class="col-lg-4 col-md-4">
-    <img class="logo2" src="images/logo2.png">
+    <div class="col-lg-4 col-md-4 logo2">
+    <img  src="images/logo2.png">
+     </div>
      </div>
     <br>
      <div class="logo5">
