--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/Roboto-Medium.ttf">
   <link rel="stylesheet" type="text/css" href="css/Roboto-Bold.ttf">
   <link rel="stylesheet" type="text/css" href="css/Roboto-Regular.ttf">
+  <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <script src="js/jquery.js"></script>
     <script src="js/tbi.js"></script>
