--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="../css/csr.css">
   <link rel="stylesheet" type="text/css" href="../css/about.css">
   <link rel="stylesheet" type="text/css" href="../css/startups.css">
+  <link rel="stylesheet" type="text/css" href="../css/common.css">
    <link rel="stylesheet" type="text/css" href="../css/infrastructure.css">
   <script src="js/jquery.js"></script>
     <script type="text/javascript" src="js/tbi.js"></script>
