--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <!--Main Nav-->
    <div ng-include="'templates/nav.html'"></div>
 
-   <div ui-view style="min-height: 100%;margin-bottom: -180px;" onLoad="window.scroll(0, -180)"></div>
+   <div ui-view style="background-color:#fafafa;min-height: 100%;margin-bottom: -180px;" onLoad="window.scroll(0, -180)"></div>
 <footer class="footer" ng-include="'templates/footer.html'" >
 
 </footer>
